# fast-api-onboarding

./: Dockerfile  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
api/: main.py  supabase_client.py
api/cruds/: done.py  task.py
api/models/: __init__.py  task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
supabase/: config.toml
supabase/migrations/: 20250507091411_create_tasks_table.sql
tests/: test_main.py
